--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,28 @@
  * Made By MaterializeCSS.com
  */
 
+
+body {
+  font-size: 94%;
+}
+
+
+
 nav ul a,
 nav .brand-logo {
 /*   color:#82F4F4;
  */color:#026A69;
+
 }
+
+#logo-container {
+  display: block;
+  height:70px;
+  margin: 0;
+  margin: 0;
+}
+
+
 
 #logo-container {
   display: block;
@@ -38,12 +55,9 @@ max-width: 100%;
   justify-content: space-between;
 }
 
-
-
-
-
-
-
+img {
+  max-width:100;
+}
 
 
 p {
@@ -98,6 +112,14 @@ p {
   }
 }
 
+
+@media only screen and (max-width :480px) {
+#bigimg {
+  max-width: 100%;
+  resize: horizontal;
+
+}
+}
 
 
 .icon-block {
